5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1745_1526.log
== TEST (2019-05-15 14:24:57) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=o
while(g<=0):
	g = (g-g1)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:27) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=o
while(m<=0):
	m = (g-g1)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:53) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(m<=0):
	m = (g-g1)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(m<=0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:17) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(m<=0)
	m = (g-g1)+r
	t = t + 1	
	print(t)
-- ERROR:
File "XXXX", line 5
    while(m<=0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:27:17) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(m<=0)
	m = (g-g1)+r
	t = t + 1	
	print(t)
-- EXECUTION TIME:
0.126276
-- ERROR:
  File "/home/codebench/codes/1745/1526/main.py", line 5
    while(m<=0)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:18) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(m<=0)
	m = (g-g1)+r
	t = t + 1	
	print(t)
-- ERROR:
File "XXXX", line 5
    while(m<=0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:34) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(m<=0):
	m = (g-g1)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(m<=0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:59) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g<=0):
	g = (g-g1)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(m<=0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:16) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g<=0):
	g = (g-g1)+r
	t = t + 1	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(m<=0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:44) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g>=0):
	g = (g-g1)+r
	t = t + 1	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    g = (g-g1)+r
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:07) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g<0):
	g = (g-g1)+r
	t = t + 1	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    g = (g-g1)+r
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:28) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g<0):
	g = (g-g1)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    g = (g-g1)+r
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:18) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g<=0):
	g = (g-g1)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    g = (g-g1)+r
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:56) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g<=0):
	g = (g1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    g = (g-g1)+r
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:36:15) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g1<=0):
	g = (g1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(g1<=0):
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:31) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g1==0):
	g = (g1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(g1==0):
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:46) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(g1==0):
	g1 = (g1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(g1==0):
NameError: name 'g1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:03) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(m==0):
	m = (g1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(m==0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:47) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
while(q1==0):
	q1 = (g1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(m==0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:41:16) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
c = 0
while(c==0):
	c = (q1-g)+r
	t = t + 1	
	print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:41:28) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0
c = q1
while(c==0):
	c = (q1-g)+r
	t = t + 1	
	print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:01) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(==0):
	q1 = (q1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
File "XXXX", line 6
    while(==0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:03) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(==0):
	q1 = (q1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
File "XXXX", line 6
    while(==0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:03) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(==0):
	q1 = (q1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
File "XXXX", line 6
    while(==0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:03) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(==0):
	q1 = (q1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
File "XXXX", line 6
    while(==0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:09) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(q1==0):
	q1 = (q1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
File "XXXX", line 6
    while(==0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:40) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(m==0):
	m = (q1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(m==0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:08:15) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(t<0):
	m = (q1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(m==0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:33) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(q1<0):
	m = (q1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(m==0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:47) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(q1<0):
	q1 = (q1-g)+r
	t = t + 1	
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(m==0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:30) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(q1>0):
	q1 = (q1-g)+r
	t = t + 1	
	print(t)
-- OUTPUT:
1
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:10:42) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(q1>0):
	q1 = (q1-g)+r
	t = t + 1	
	print(t)
-- EXECUTION TIME:
0.214354
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:45) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(q1>0):
	q1 = (q1-g)+r
	t = t + 1	
	print(t)
-- OUTPUT:
1
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:54) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(q1>0):
	q1 = (q1-g)+r
	t = t + 1	
	m = t
	print(m)
-- OUTPUT:
1
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:08) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(q1>0):
	q1 = (q1-g)+r
	t = t + 1	
	m = t
print(m)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:12:18) 
-- CODE:
q1= int(input("mana in9cial: "))
g= int(input("gasto: "))
r= int(input("recupe4rado: "))
t=0

while(q1>0):
	q1 = (q1-g)+r
	t = t + 1	
	m = t
print(m)
-- EXECUTION TIME:
0.145898
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
19
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
